fixed text alignment

--- a/client/src/components/song/song.module.css
+++ b/client/src/components/song/song.module.css
@@ -27,8 +27,3 @@
   font-weight: bold;
   margin: 4px 16px;
 }
-
-.songIcon {
-  float: right;
-  margin: 0 5px 0 5%;
-}
